static text complited

--- a/demo-corporate-about.html
+++ b/demo-corporate-about.html
@@ -133,7 +133,7 @@
         <!-- start page title -->
         <section class="top-space-margin page-title-big-typography border-radius-6px lg-border-radius-0px p-0"
             data-parallax-background-ratio="0.5"
-            style="background-image: url(images/demo-corporate-about-title-bg.jpg)">
+            style="background-image: url(images/NAMI.uz-main-background-white.png)">
             <div class="opacity-extra-medium bg-blue-whale"></div>
             <div class="container">
                 <div class="row align-items-center justify-content-center small-screen">
@@ -162,18 +162,23 @@
                     <div class="col-xl-5 col-lg-6 col-md-10 md-mb-20px text-center text-lg-start"
                         data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                         <span
-                            class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">About
-                            company</span>
-                        <h3 class="text-dark-gray fw-700 mb-0 ls-minus-1px">Powerful agency for corporate business.</h3>
+                            class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">
+                            О нас
+                        </span>
+                        <h5 class="text-dark-gray fw-700 mb-0 ls-minus-1px">
+                            Национальная Ассоциация Микрофинансовых Институтов
+                        </h5>
                     </div>
                     <div
                         class="col-xl-6 col-lg-6 col-md-10 offset-xl-1 text-center text-lg-start last-paragraph-no-margin">
                         <p class="w-90 xl-w-100"
                             data-anime='{ "el": "lines", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            We strive to develop real-world web solutions that are ideal for small to large projects
-                            with bespoke project requirements. we compelling web, <span
-                                class="fw-600 text-dark-gray text-decoration-line-bottom">which are the right-fit for
-                                your target.</span></p>
+                            <strong>НАМИ</strong> (ранее Национальная Ассоциация Микрокредитных организаций и Кредитных
+                            союзов <strong>НАМОКС</strong>)
+                            <span class="fw-600 text-dark-gray text-decoration-line-bottom">
+                                является некоммерческой юридической организацией.
+                            </span>
+                        </p>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-2 justify-content-center"
@@ -186,8 +191,12 @@
                                     alt="" />
                             </div>
                             <div class="feature-box-content">
-                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Trusted company</span>
-                                <p>We deliver email marketing campaigns to audience.</p>
+                                <span class="d-block fs-19 fw-600 text-dark-gray mb-5px">
+                                    Всегда готовы поддержать вас
+                                </span>
+                                <p>
+                                    Непрерывная готовность поддержки вашего успеха всегда доступна.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -200,8 +209,10 @@
                                     alt="" />
                             </div>
                             <div class="feature-box-content">
-                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Professional work</span>
-                                <p>We also help our clients with social media strategy.</p>
+                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">
+                                    Профессиональные специалисты
+                                </span>
+                                <p>Экспертная компетенция: наши специалисты для вашего успеха.</p>
                             </div>
                         </div>
                     </div>
@@ -214,8 +225,10 @@
                                     alt="" />
                             </div>
                             <div class="feature-box-content">
-                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Award winning</span>
-                                <p>We believe in challenges so we have made challenges.</p>
+                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">
+                                    Лучшие организации уже с нами
+                                </span>
+                                <p>Элитные партнеры: лучшие организации выбирают нас.</p>
                             </div>
                         </div>
                     </div>
@@ -228,8 +241,10 @@
                                     alt="" />
                             </div>
                             <div class="feature-box-content">
-                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">Help any time</span>
-                                <p>We never fail for support for your business anywhere.</p>
+                                <span class="d-block fs-19 fw-700 text-dark-gray mb-5px">
+                                    Онлайн консультация
+                                </span>
+                                <p>Экспертные советы: поддержка через онлайн консультацию.</p>
                             </div>
                         </div>
                     </div>
@@ -251,9 +266,9 @@
                             </div>
                             <div
                                 class="feature-box-content last-paragraph-no-margin text-dark-gray text-uppercase fs-15 fw-700 ls-05px">
-                                Let's make something great work together. <a href="demo-corporate-contact.html"
-                                    class="text-base-color text-decoration-line-bottom-medium border-1">Got a project in
-                                    mind?</a>
+                                Давайте вместе сделаем что-то великое. <a href="demo-corporate-contact.html"
+                                    class="text-base-color text-decoration-line-bottom-medium border-1">Есть проект на
+                                    примете?</a>
                             </div>
                         </div>
                     </div>
@@ -357,7 +372,7 @@
                 <div class="row justify-content-center mb-3">
                     <div class="col-xl-5 col-md-7 col-lg-6 col-sm-8 text-center"
                         data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                        <h3 class="text-dark-gray fw-700 ls-minus-1px">Committed staff are ready to help you</h3>
+                        <h3 class="text-dark-gray fw-700 ls-minus-1px">Наша команда</h3>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-lg-4 row-cols-sm-2"
@@ -369,13 +384,13 @@
                             <figcaption
                                 class="w-100 h-100 d-flex align-items-end p-13 lg-p-8 md-p-10 bg-gradient-base-transparent border-radius-6px">
                                 <div class="w-100">
-                                    <span class="team-member-name fw-500 text-white d-block">Jeremy dupont</span>
-                                    <span class="member-designation fs-15 lh-20 text-white d-block">Director</span>
+                                    <span class="team-member-name fw-500 text-white d-block">Мирлазиз Умаров</span>
+                                    <span class="member-designation fs-15 lh-20 text-white d-block">Директор</span>
                                 </div>
                                 <div class="social-icon d-flex flex-column flex-shrink-1">
                                     <a href="https://www.twitter.com/" target="_blank"
                                         class="text-dark-gray bg-white"><i
-                                            class="fa-brands fa-twitter icon-small"></i></a>
+                                            class="fa-brands fa-linkedin-in icon-small"></i></a>
                                 </div>
                             </figcaption>
                         </figure>
@@ -388,11 +403,11 @@
                             <figcaption
                                 class="w-100 h-100 d-flex align-items-end p-13 lg-p-8 md-p-10 bg-gradient-base-transparent border-radius-6px">
                                 <div class="w-100">
-                                    <span class="team-member-name fw-500 text-white d-block">Jessica dover</span>
-                                    <span class="member-designation fs-15 lh-20 text-white d-block">Founder</span>
+                                    <span class="team-member-name fw-500 text-white d-block">Мирлазиз Умаров</span>
+                                    <span class="member-designation fs-15 lh-20 text-white d-block">Директор</span>
                                 </div>
                                 <div class="social-icon d-flex flex-column flex-shrink-1">
-                                    <a href="https://www.linkedin.com/" target="_blank"
+                                    <a href="https://www.twitter.com/" target="_blank"
                                         class="text-dark-gray bg-white"><i
                                             class="fa-brands fa-linkedin-in icon-small"></i></a>
                                 </div>
@@ -401,38 +416,38 @@
                     </div>
                     <!-- end team member item -->
                     <!-- start team member item -->
-                    <div class="col team-style-08 border-radius-6px xs-mb-30px">
+                    <div class="col team-style-08 border-radius-6px md-mb-30px">
                         <figure class="mb-0 position-relative overflow-hidden border-radius-4px">
                             <img src="https://via.placeholder.com/600x755" alt="" />
                             <figcaption
                                 class="w-100 h-100 d-flex align-items-end p-13 lg-p-8 md-p-10 bg-gradient-base-transparent border-radius-6px">
                                 <div class="w-100">
-                                    <span class="team-member-name fw-500 text-white d-block">Matthew taylor</span>
-                                    <span class="member-designation fs-15 lh-20 text-white d-block">Manager</span>
+                                    <span class="team-member-name fw-500 text-white d-block">Мирлазиз Умаров</span>
+                                    <span class="member-designation fs-15 lh-20 text-white d-block">Директор</span>
                                 </div>
                                 <div class="social-icon d-flex flex-column flex-shrink-1">
-                                    <a href="https://www.behance.net/" target="_blank"
-                                        class="text-dark-gray bg-white"><i
-                                            class="fa-brands fa-behance icon-small"></i></a>
+                                    <a href="https://www.twitter.com/" target="_blank" class="text-dark-gray bg-white">
+                                        <i class="fa-brands fa-linkedin-in icon-small"></i>
+                                    </a>
                                 </div>
                             </figcaption>
                         </figure>
                     </div>
                     <!-- end team member item -->
                     <!-- start team member item -->
-                    <div class="col team-style-08 border-radius-6px">
+                    <div class="col team-style-08 border-radius-6px md-mb-30px">
                         <figure class="mb-0 position-relative overflow-hidden border-radius-4px">
                             <img src="https://via.placeholder.com/600x755" alt="" />
                             <figcaption
                                 class="w-100 h-100 d-flex align-items-end p-13 lg-p-8 md-p-10 bg-gradient-base-transparent border-radius-6px">
                                 <div class="w-100">
-                                    <span class="team-member-name fw-500 text-white d-block">Johncy parker</span>
-                                    <span class="member-designation fs-15 lh-20 text-white d-block">Manager</span>
+                                    <span class="team-member-name fw-500 text-white d-block">Мирлазиз Умаров</span>
+                                    <span class="member-designation fs-15 lh-20 text-white d-block">Директор</span>
                                 </div>
                                 <div class="social-icon d-flex flex-column flex-shrink-1">
-                                    <a href="https://www.facebook.com/" target="_blank"
-                                        class="text-dark-gray bg-white"><i
-                                            class="fa-brands fa-facebook-f icon-small"></i></a>
+                                    <a href="https://www.twitter.com/" target="_blank" class="text-dark-gray bg-white">
+                                        <i class="fa-brands fa-linkedin-in icon-small"></i>
+                                    </a>
                                 </div>
                             </figcaption>
                         </figure>
@@ -449,8 +464,9 @@
                     <div class="col-xl-5 col-lg-6 text-center mb-1"
                         data-anime='{ "translateY": [0, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                         <span
-                            class="text-dark-gray fw-700 fs-15 text-uppercase border-1 pb-5px border-bottom border-color-extra-medium-gray text-dark-gray">Join
-                            the 10,000+ companies using NAMI</span>
+                            class="text-dark-gray fw-700 fs-15 text-uppercase border-1 pb-5px border-bottom border-color-extra-medium-gray text-dark-gray">
+                            Присоединяйтесь к нашим 40+ участникам
+                        </span>
                     </div>
                 </div>
                 <div class="row position-relative clients-style-08 mt-25px"
