--- a/demo-corporate-contact.html
+++ b/demo-corporate-contact.html
@@ -132,7 +132,8 @@
         <!-- end header -->
         <!-- start page title -->
         <section class="top-space-margin page-title-big-typography border-radius-6px lg-border-radius-0px p-0"
-            data-parallax-background-ratio="0.5" style="background-image: url(https://via.placeholder.com/1920x1100)">
+            data-parallax-background-ratio="0.5"
+            style="background-image: url(images/demo-corporate-customer-stories-bg.jpg)">
             <div class="opacity-extra-medium bg-blue-whale"></div>
             <div class="container">
                 <div class="row align-items-center justify-content-center small-screen">
@@ -159,15 +160,17 @@
                     <div class="col-xl-5 col-lg-7 col-md-10 md-mb-25px"
                         data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                         <span
-                            class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">How
-                            can help you?</span>
-                        <h3 class="text-dark-gray fw-700 ls-minus-1px mb-0">Have a project in mind? Get in touch!</h3>
+                            class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">
+                            Обратная связь
+                        </span>
+                        <h3 class="text-dark-gray fw-700 ls-minus-1px mb-0">Как мы можем вам помочь?</h3>
                     </div>
                     <div class="col-xl-6 offset-xl-1 col-lg-5 col-md-10 last-paragraph-no-margin">
                         <p class="w-90 lg-w-100"
                             data-anime='{ "el": "lines", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            We're here to help and answer any question you might have. We look forward to hearing from
-                            you. Any need help you please contact us or meet to office with coffee.</p>
+                            Мы здесь, чтобы помочь и ответить на любой ваш вопрос. Мы с нетерпением ждем вашего ответа.
+                            Если вам нужна помощь, пожалуйста, свяжитесь с нами или встретитесь в офисе с кофе.
+                        </p>
                     </div>
                 </div>
                 <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-4 row-cols-md-2 row-cols-sm-2 mb-6 sm-mb-8"
@@ -175,35 +178,30 @@
                     <div class="col md-mb-30px text-center text-sm-start">
                         <span
                             class="alt-font fs-18 fw-700 d-block w-90 text-dark-gray border-bottom border-2 border-color-dark-gray pb-15px mb-15px xs-w-100"><i
-                                class="feather icon-feather-map-pin d-inline-block icon-small me-10px"></i>Office
-                            location</span>
+                                class="feather icon-feather-map-pin d-inline-block icon-small me-10px"></i>Адрес</span>
                         <div class="last-paragraph-no-margin">
-                            <p>16122 collins street,<br> Melbourne, Australia</p>
+                            <p>улица. Навои 44<br> Ташкент, Узбекистан</p>
                         </div>
                     </div>
                     <div class="col md-mb-30px text-center text-sm-start">
                         <span
                             class="alt-font fs-18 fw-700 d-block w-90 text-dark-gray border-bottom border-2 border-color-dark-gray pb-15px mb-15px xs-w-100"><i
-                                class="feather icon-feather-mail d-inline-block icon-small me-10px"></i>Send a
-                            message</span>
-                        <a href="mailto:info@yourdomain.com">info@yourdomain.com</a><br>
-                        <a href="mailto:sales@yourdomain.com">sales@yourdomain.com</a>
+                                class="feather icon-feather-mail d-inline-block icon-small me-10px"></i>E-mail</span>
+                        <a href="mailto:info@yourdomain.com">info@nami.uz</a><br>
                     </div>
                     <div class="col xs-mb-30px text-center text-sm-start">
                         <span
                             class="alt-font fs-18 fw-700 d-block w-90 text-dark-gray border-bottom border-2 border-color-dark-gray pb-15px mb-15px xs-w-100"><i
-                                class="feather icon-feather-phone d-inline-block icon-small me-10px"></i>Call us
-                            directly</span>
-                        <a href="tel:1800222000">1-800-222-000</a><br>
-                        <a href="tel:1800222002">1-800-222-002</a>
+                                class="feather icon-feather-phone d-inline-block icon-small me-10px"></i>Телефон</span>
+                        <a href="tel:+998951945001">+998 95 194-50-01</a><br>
+                        <a href="tel:+998712448244">+998 71 244-82-44</a>
                     </div>
                     <div class="col text-center text-sm-start">
                         <span
                             class="alt-font fs-18 fw-700 d-block w-90 text-dark-gray border-bottom border-2 border-color-dark-gray pb-15px mb-15px xs-w-100"><i
-                                class="feather icon-feather-users d-inline-block icon-small me-10px"></i>Join our
-                            team</span>
-                        <a href="mailto:hire@yourdomain.com">hire@yourdomain.com</a><br>
-                        <a href="mailto:hr@yourdomain.com">hr@yourdomain.com</a>
+                                class="feather icon-feather-users d-inline-block icon-small me-10px"></i>Мы
+                            работаем</span>
+                        <p>Пон — Пят :<br> 10:00 — 18:00</p>
                     </div>
                 </div>
                 <div class="row justify-content-center g-0"
@@ -216,8 +214,7 @@
                             </div>
                             <div
                                 class="feature-box-content last-paragraph-no-margin text-white text-uppercase fs-15 fw-600 ls-05px xs-lh-24">
-                                Let's make something great work together. <a href="demo-corporate-contact.html"
-                                    class="text-white text-decoration-line-bottom-medium">Got a project in mind?</a>
+                                ДАВАЙТЕ СДЕЛАЕМ ЧТО-ТО БОЛЬШОЕ ВМЕСТЕ.
                             </div>
                         </div>
                     </div>
@@ -243,7 +240,7 @@
                     <div class="col-md-6">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2996.336441087967!2d69.23554527553053!3d41.323296899968966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b9dd8dd8dbd%3A0xdac20165d5674c22!2z0J3QsNGG0LjQvtC90LDQu9GM0L3QsNGPINCQ0YHRgdC-0YbQuNCw0YbQuNGPINCc0LjQutGA0L7RhNC40L3QsNC90YHQvtCy0YvRhSDQmNC90YHRgtC40YLRg9GC0L7Qsg!5e0!3m2!1sru!2s!4v1707072141157!5m2!1sru!2s"
-                            width="100%" height="430px"
+                            width="100%" height="450px"
                             style="border:0; border-bottom-left-radius: 7px; border-top-left-radius: 7px;"
                             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <!-- <div id="map" class="map"
@@ -261,9 +258,10 @@
                     <div class="col-lg-6 text-center"
                         data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                         <span
-                            class="ps-25px pe-25px mb-15px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-quartz-light-transparent d-inline-block">Get
-                            in touch with us</span>
-                        <h3 class="text-dark-gray fw-700 ls-minus-1px">How we can help you?</h3>
+                            class="ps-25px pe-25px mb-15px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-quartz-light-transparent d-inline-block">
+                            Обратная связь
+                        </span>
+                        <h3 class="text-dark-gray fw-700 ls-minus-1px">Как мы можем вам помочь?</h3>
                     </div>
                 </div>
                 <div class="row justify-content-center">
@@ -272,70 +270,59 @@
                             <div class="row justify-content-center"
                                 data-anime='{ "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                                 <div class="col-md-6">
-                                    <label for="exampleInputEmail1" class="form-label fw-600 text-dark-gray mb-0">Enter
-                                        your name*</label>
+                                    <label for="exampleInputEmail1"
+                                        class="form-label fw-600 text-dark-gray mb-0">Имя*</label>
                                     <div class="position-relative form-group mb-25px">
                                         <span class="form-icon"><i class="bi bi-emoji-smile"></i></span>
                                         <input
                                             class="ps-0 border-radius-0px border-color-extra-medium-gray bg-transparent form-control required"
                                             id="exampleInputEmail1" type="text" name="name"
-                                            placeholder="What's your good name?" />
+                                            placeholder="Как тебя зовут?" />
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <label for="exampleInputEmail1" class="form-label fw-600 text-dark-gray mb-0">Email
-                                        address*</label>
-                                    <div class="position-relative form-group mb-25px">
-                                        <span class="form-icon"><i class="bi bi-envelope"></i></span>
-                                        <input
-                                            class="ps-0 border-radius-0px border-color-extra-medium-gray bg-transparent form-control required"
-                                            id="exampleInputEmail2" type="email" name="email"
-                                            placeholder="Enter your email address" />
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="exampleInputEmail1" class="form-label fw-600 text-dark-gray mb-0">Phone
-                                        number</label>
+                                    <label for="exampleInputEmail1" class="form-label fw-600 text-dark-gray mb-0">Номер
+                                        телефона*</label>
                                     <div class="position-relative form-group mb-25px">
                                         <span class="form-icon"><i class="bi bi-telephone"></i></span>
                                         <input
                                             class="ps-0 border-radius-0px border-color-extra-medium-gray bg-transparent form-control"
                                             id="exampleInputEmail3" type="tel" name="phone"
-                                            placeholder="Enter your phone number" />
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <label for="exampleInputEmail1"
-                                        class="form-label fw-600 text-dark-gray mb-0">Subject</label>
-                                    <div class="position-relative form-group mb-25px">
-                                        <span class="form-icon"><i class="bi bi-journals"></i></span>
-                                        <input
-                                            class="ps-0 border-radius-0px border-color-extra-medium-gray bg-transparent form-control"
-                                            id="exampleInputEmail4" type="text" name="subject"
-                                            placeholder="How can we help you?" />
+                                            placeholder="Введите свой номер телефона" />
                                     </div>
                                 </div>
                                 <div class="col-12 mb-4">
-                                    <label for="exampleInputEmail1" class="form-label fw-600 text-dark-gray mb-0">Your
-                                        message</label>
+                                    <label for="exampleInputEmail1"
+                                        class="form-label fw-600 text-dark-gray mb-0">Email*</label>
+                                    <div class="position-relative form-group mb-25px">
+                                        <span class="form-icon"><i class="bi bi-envelope"></i></span>
+                                        <input
+                                            class="ps-0 border-radius-0px border-color-extra-medium-gray bg-transparent form-control required"
+                                            id="exampleInputEmail2" type="email" name="email"
+                                            placeholder="Введите ваш адрес электронной почты" />
+                                    </div>
+                                </div>
+                                <div class="col-12 mb-4">
+                                    <label for="exampleInputEmail1"
+                                        class="form-label fw-600 text-dark-gray mb-0">Письмо*</label>
                                     <div class="position-relative form-group form-textarea mb-0">
                                         <textarea
                                             class="ps-0 border-radius-0px border-color-extra-medium-gray bg-transparent form-control"
-                                            name="comment" placeholder="Describe about your project"
-                                            rows="4"></textarea>
+                                            name="comment" placeholder="Опишите свое сообщение" rows="4"></textarea>
                                         <span class="form-icon"><i class="bi bi-chat-square-dots"></i></span>
                                     </div>
                                 </div>
                                 <div class="col-xxl-6 col-lg-7 col-md-8">
-                                    <p class="mb-0 fs-14 lh-24 text-center text-md-start">We are committed to protecting
-                                        your privacy. We will never collect information about you without your explicit
-                                        consent.</p>
+                                    <p class="mb-0 fs-14 lh-24 text-center text-md-start">
+                                        Мы стремимся защитить вашу личную жизнь. Мы никогда не будем собирать информацию
+                                        о вас без вашего явного согласия.
+                                    </p>
                                 </div>
                                 <div class="col-xxl-6 col-lg-5 col-md-4 text-center text-md-end sm-mt-25px">
                                     <input id="exampleInputEmail5" type="hidden" name="redirect" value="">
                                     <button
                                         class="btn btn-medium btn-dark-gray btn-box-shadow btn-round-edge text-transform-none primary-font submit"
-                                        type="submit">Send message</button>
+                                        type="submit">Отправить</button>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-results mt-20px d-none"></div>
