--- a/demo-corporate.html
+++ b/demo-corporate.html
@@ -1181,9 +1181,10 @@
             <div class="row align-items-center mb-7">
                <div class="col-xxl-4 col-lg-5 md-mb-15 sm-mb-20 text-center text-lg-start">
                   <span
-                     class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">Simple
-                     process</span>
-                  <h3 class="text-dark-gray fw-700 ls-minus-2px mb-40px">Understand the business process.</h3>
+                     class="ps-25px pe-25px mb-20px text-uppercase text-base-color fs-14 lh-42px fw-700 border-radius-100px bg-gradient-very-light-gray-transparent d-inline-block">
+                     Наши задачи
+                  </span>
+                  <h3 class="text-dark-gray fw-700 ls-minus-2px mb-40px">Поймите наши обязанности.</h3>
                   <div class="row row-cols-1"
                      data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                      <!-- start process step item -->
@@ -1198,8 +1199,10 @@
                               <span class="progress-step-separator bg-dark-gray opacity-1"></span>
                            </div>
                            <div class="process-content ps-30px last-paragraph-no-margin mb-30px">
-                              <span class="d-block fw-700 text-dark-gray mb-5px fs-18">Start market research</span>
-                              <p class="w-90 lg-w-100 lh-32">Lorem ipsum amet consectetur eiusmod tempor incididunt.</p>
+                              <span class="d-block fw-700 text-dark-gray mb-5px fs-16">
+                                 Консолидация усилий небанковских кредитных организаций по повышению качества
+                                 микрофинансовых услуг и расширение доступа к ним
+                              </span>
                            </div>
                         </div>
                      </div>
@@ -1216,8 +1219,10 @@
                               <span class="progress-step-separator bg-dark-gray opacity-1"></span>
                            </div>
                            <div class="process-content ps-30px last-paragraph-no-margin mb-30px">
-                              <span class="d-block fw-700 text-dark-gray mb-5px fs-18">Discussion of the idea</span>
-                              <p class="w-90 lg-w-100 lh-32">Lorem ipsum amet consectetur eiusmod tempor incididunt.</p>
+                              <span class="d-block fw-700 text-dark-gray mb-5px fs-16">
+                                 Развитие потенциала микрофинансового сектора через внедрение современных финансовых
+                                 услуг
+                              </span>
                            </div>
                         </div>
                      </div>
@@ -1233,8 +1238,10 @@
                               </div>
                            </div>
                            <div class="process-content ps-30px last-paragraph-no-margin">
-                              <span class="d-block fw-700 text-dark-gray mb-5px fs-18">Production planning</span>
-                              <p class="w-90 lg-w-100 lh-32">Lorem ipsum amet consectetur eiusmod tempor incididunt.</p>
+                              <span class="d-block fw-700 text-dark-gray mb-5px fs-16">
+                                 Повышение финансовой грамотности населения и информированности о микрофинансовых
+                                 услугах
+                              </span>
                            </div>
                         </div>
                      </div>
@@ -1264,10 +1271,13 @@
                   data-anime='{ "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                   <div
                      class="bg-base-color fw-700 text-white text-uppercase border-radius-30px ps-20px pe-20px fs-12 me-10px sm-m-5px d-inline-block align-middle">
-                     hurray</div>
-                  <div class="fs-18 fw-500 text-dark-gray d-inline-block align-middle">Let's make something great work
-                     together. <a href="demo-corporate-contact.html"
-                        class="text-dark-gray text-decoration-line-bottom fw-700">Got a project in mind?</a>
+                     торопиться
+                  </div>
+                  <div class="fs-18 fw-500 text-dark-gray d-inline-block align-middle">
+                     Давайте вместе сделаем что-то великое.
+                     <a href="demo-corporate-contact.html" class="text-dark-gray text-decoration-line-bottom fw-700">
+                        Есть проект на примете?
+                     </a>
                   </div>
                </div>
             </div>
@@ -1354,44 +1364,6 @@
                   </div>
                </div>
             </div>
-            <div class="row row-cols-1 row-cols-md-3 justify-content-center mb-6 md-mb-8 sm-mb-45px"
-               data-anime='{ "el": "childs", "willchange": "transform", "perspective": [1200,1200], "translateY": [0, 0], "scale": [1.1, 1], "rotateX": [30, 0], "opacity": [0,1], "duration": 1000, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-               <div class="col sm-mb-30px">
-                  <div
-                     class="bg-white h-100 border-radius-6px text-center box-shadow-quadruple-large box-shadow-quadruple-large-hover">
-                     <div class="pt-10 pb-10">
-                        <img src="images/logo-monday-dark-gray-02.svg" class="h-40px md-h-35px sm-h-40px" alt="" />
-                     </div>
-                     <div class="border-top fs-16 p-15px last-paragraph-no-margin">
-                        <p>Project management - <span class="fw-600 text-dark-gray">275% Growth</span></p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col sm-mb-30px">
-                  <div
-                     class="bg-white h-100 border-radius-6px text-center box-shadow-quadruple-large box-shadow-quadruple-large-hover">
-                     <div class="pt-10 pb-10">
-                        <img src="images/logo-dropbox-dark-gray-02.svg" class="h-40px md-h-35px sm-h-40px" alt="" />
-                     </div>
-                     <div
-                        class="border-top fs-16 border-1 border-color-extra-medium-gray p-15px last-paragraph-no-margin">
-                        <p>Team management - <span class="fw-600 text-dark-gray">195% Growth</span></p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col">
-                  <div
-                     class="bg-white h-100 border-radius-6px text-center box-shadow-quadruple-large box-shadow-quadruple-large-hover">
-                     <div class="pt-10 pb-10">
-                        <img src="images/logo-slack-dark-gray-02.svg" class="h-40px md-h-35px sm-h-40px" alt="" />
-                     </div>
-                     <div
-                        class="border-top fs-16 border-1 border-color-extra-medium-gray p-15px last-paragraph-no-margin">
-                        <p>Secure storage - <span class="fw-600 text-dark-gray">235% Growth</span></p>
-                     </div>
-                  </div>
-               </div>
-            </div>
             <div
                class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center ps-3 pe-3 xs-mt-40px"
                data-anime='{ "el": "childs", "translateX": [50, 0], "opacity": [0,1], "duration": 1200, "delay": 0, "staggervalue": 150, "easing": "easeOutQuad" }'>
@@ -1454,9 +1426,12 @@
                      </div>
                      <div
                         class="w-100 text-center position-relative mt-auto pt-20px pb-25px ps-15px pe-15px border-top border-color-transparent-white-light">
-                        <div class="fs-14 text-uppercase text-white fw-600 ls-05px">Let's make something great work
-                           together. <a href="demo-corporate-contact.html"
-                              class="text-decoration-line-bottom text-white">Got a project in mind?</a></div>
+                        <div class="fs-14 text-uppercase text-white fw-600 ls-05px">
+                           Давайте вместе сделаем что-то великое.
+                           <a href="demo-corporate-contact.html" class="text-decoration-line-bottom text-white">
+                              Есть проект на примете?
+                           </a>
+                        </div>
                      </div>
                   </div>
                </div>
@@ -1470,7 +1445,7 @@
             <div class="row justify-content-center mb-3">
                <div class="col-lg-7 text-center"
                   data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                  <h3 class="text-dark-gray fw-700 ls-minus-1px">News</h3>
+                  <h3 class="text-dark-gray fw-700 ls-minus-1px">Новости</h3>
                </div>
             </div>
             <div class="row mb-5 sm-mb-7">
