--- a/demo-corporate-blog.html
+++ b/demo-corporate-blog.html
@@ -132,7 +132,8 @@
         <!-- end header -->
         <!-- start page title -->
         <section class="top-space-margin page-title-big-typography border-radius-6px lg-border-radius-0px p-0"
-            data-parallax-background-ratio="0.5" style="background-image: url(https://via.placeholder.com/1920x1100)">
+            data-parallax-background-ratio="0.5"
+            style="background-image: url(images/demo-corporate-customer-blog-bg.jpg)">
             <div class="opacity-extra-medium bg-blue-whale"></div>
             <div class="container">
                 <div class="row align-items-center justify-content-center small-screen">
